# rapier4j

./: Cargo.toml  README.md  build.rs  post-build.rs
autogen/: README.md  data.txt  data2.txt  funcs.py
bindings/: ActiveCollisionTypes.rs4j  Collider.rs4j  ColliderBuilder.rs4j  Isometry.rs4j  Tuple.rs4j
bindings/nalgebra/vector/: Vector3.rs4j
bindings/rapier/: ActiveCollisionTypes.rs4j.todo  ActiveEvents.rs4j  ActiveHooks.rs4j  Collider.rs4j  ColliderBuilder.rs4j
bindings/util/: Triple.rs4j  Tuple.rs4j
java/com/dimforge/rapier3d/: CoefficientCombineRule.java
java/org/jetbrains/annotations/: NonNls.java  Nullable.java
src/: bindings.rs  lib.rs  patches.rs  tuple.rs  util.rs
src/wrappers/vec/: vec3.rs
