[package]
name = "rapier4j"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
jni = "0.21.1"
nalgebra = "0.33.0"
parry3d = { version = "0.17.1", features = ["parallel"] }
rapier3d = { version = "0.22.0", features = ["parallel"] }

[build-dependencies]
anyhow = "1.0.79"
rs4j = { version = "0.5.0", path = "../rs4j" }
