[package]
name = "rapier4j"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
post-build = ["rs4j/build"]

[[bin]]
name = "post-build"
path = "post-build.rs"
required-features = ["post-build"]

[dependencies]
anyhow = "1.0.89"
nalgebra = "0.33.0"
parry3d = { version = "0.17.1", features = ["parallel"] }
rapier3d = { version = "0.22.0", features = ["parallel"] }
rs4j = { version = "0", path = "../rs4j" }

[build-dependencies]
anyhow = "1.0.89"
rs4j = { version = "0", path = "../rs4j", features = ["build"] }
